ad-ldap/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: auth-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy   
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4180
          protocol: TCP      
        args:
        - --cookie-secure=false
        - --provider=oidc
        - --client-id=oidc-auth-client
        - --client-secret=secret
        - --oidc-issuer-url=https://auth.lb-ip-pub.nip.io/
        - --http-address=0.0.0.0:4180
        - --upstream=file:///dev/null
        - --email-domain=*
        - --set-authorization-header=true
        # For x509 certificate error
        - --ssl-insecure-skip-verify=true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: auth-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
